// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots @components/atoms/Button Primary 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  background-color: #3ee7cd;
  -webkit-transform: skew(45deg);
  -ms-transform: skew(45deg);
  transform: skew(45deg);
  padding: 0.9rem 3.7rem;
  border: none;
  box-shadow: -5px 5px 14px 0px rgba(0,0,0,0.2);
  -webkit-transition: 0.3s;
  transition: 0.3s;
  outline: none;
  font-family: montserrat;
  cursor: pointer;
  color: #fff;
}

.c1:hover {
  background-color: #42beab;
  color: #fff;
}

.c1:active {
  background-color: #42beab;
  box-shadow: -3px 3px 14px 0px rgba(129,67,67,0.2);
}

.c1:disabled {
  background-color: $gray;
}

.c1:disabled,
.c1:disabled:hover {
  cursor: default;
}

.c2 {
  display: inline-block;
  font-size: 1.125rem;
  text-transform: uppercase;
  font-weight: 600;
  line-height: 1.25rem;
  -webkit-transform: skew(-45deg);
  -ms-transform: skew(-45deg);
  transform: skew(-45deg);
}

@media (max-width:540px) {
  .c1 {
    padding: 0.9rem 1rem;
    width: 88%;
    max-width: 88%;
  }
}

<div
  className="c0"
>
  <button
    className="c1"
    color="primary"
  >
    <span
      className="c2"
    >
      Primary Button
    </span>
  </button>
  <div
    className="c3"
  />
</div>
`;

exports[`Storyshots @components/atoms/Button Secondary 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  background-color: #fff;
  -webkit-transform: skew(45deg);
  -ms-transform: skew(45deg);
  transform: skew(45deg);
  padding: 0.9rem 3.7rem;
  border: none;
  box-shadow: -5px 5px 14px 0px rgba(0,0,0,0.2);
  -webkit-transition: 0.3s;
  transition: 0.3s;
  outline: none;
  font-family: montserrat;
  cursor: pointer;
  color: #21125e;
  box-shadow: inset 0px 0px 0px 3px #21125e;
  border-left: 1px solid #21125e;
  border-right: 1px solid #21125e;
}

.c1:hover {
  background-color: #21125e;
  color: #fff;
}

.c1:active {
  background-color: #190c4e;
  box-shadow: -3px 3px 14px 0px rgba(129,67,67,0.2);
}

.c1:disabled {
  background-color: $gray;
}

.c1:disabled,
.c1:disabled:hover {
  cursor: default;
}

.c2 {
  display: inline-block;
  font-size: 1.125rem;
  text-transform: uppercase;
  font-weight: 600;
  line-height: 1.25rem;
  -webkit-transform: skew(-45deg);
  -ms-transform: skew(-45deg);
  transform: skew(-45deg);
}

@media (max-width:540px) {
  .c1 {
    padding: 0.9rem 1rem;
    width: 88%;
    max-width: 88%;
  }
}

<div
  className="c0"
>
  <button
    className="c1"
    color="secondary"
  >
    <span
      className="c2"
    >
      Secondary Button
    </span>
  </button>
  <div
    className="c3"
  />
</div>
`;

exports[`Storyshots @components/atoms/ErrorMessage default 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c2 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  color: #c22d74;
  font-size: 0.75rem;
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    Error Message
  </span>
  <div
    className="c2"
  />
</div>
`;

exports[`Storyshots @components/atoms/ErrorMessage with multiple errors 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c2 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  color: #c22d74;
  font-size: 0.75rem;
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    Error Message Error Message
  </span>
  <div
    className="c2"
  />
</div>
`;

exports[`Storyshots @components/atoms/Icon sample icon 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c1 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

<div
  className="c0"
>
  <svg
    height={32}
    viewBox="0 0 32 32"
    width={32}
  >
    <path
      d="M4.965 17.333h25.684c0.353 0 0.689-0.14 0.939-0.39s0.393-0.59 0.393-0.943-0.143-0.693-0.393-0.943c-0.25-0.25-0.586-0.39-0.939-0.39h-25.691l6.613-5.653c0.266-0.23 0.433-0.557 0.463-0.91 0.027-0.35-0.087-0.7-0.316-0.97-0.23-0.267-0.556-0.433-0.909-0.463-0.35-0.027-0.699 0.087-0.969 0.317l-9.354 8c-0.27 0.23-0.436 0.557-0.463 0.91-0.027 0.35 0.087 0.7 0.313 0.97 0.076 0.088 0.162 0.165 0.257 0.23l9.247 7.917c0.27 0.23 0.616 0.343 0.969 0.317s0.679-0.193 0.909-0.463c0.23-0.27 0.343-0.617 0.316-0.97s-0.193-0.68-0.463-0.91l-6.606-5.653z"
      fill="#949494"
    />
  </svg>
  <div
    className="c1"
  />
</div>
`;

exports[`Storyshots @components/atoms/Input default 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c5 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #323232;
  color: #323232;
  outline: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c1:hover {
  color: #21125e;
  outline-width: 1px;
  outline-style: solid;
  border-color: #21125e;
  outline-color: #21125e;
}

.c2 {
  position: relative;
  width: 100%;
}

.c3 {
  padding: 0.8rem 1rem;
  margin: 0;
  border: none;
  width: 100%;
  font-size: 1rem;
  outline: none;
  background-color: transparent;
}

.c4 {
  position: absolute;
  left: 1rem;
  padding: 0 0rem;
  background-color: transparent;
  font-size: 1rem;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: all 0.3s ease,color 0s;
  transition: all 0.3s ease,color 0s;
  pointer-events: none;
}

<div
  className="c0"
>
  <div
    className="c1"
    disabled={false}
  >
    <div
      className="c2"
    >
      <input
        className="c3"
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        value=""
      />
      <label
        className="c4"
      >
        Empty
      </label>
    </div>
  </div>
  <div
    className="c5"
  />
</div>
`;

exports[`Storyshots @components/atoms/Input disabled 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c5 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #7d7d7d;
  color: #7d7d7d;
  outline: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c1:hover {
  color: #7d7d7d;
  outline-width: 0px;
  outline-style: solid;
  border-color: #7d7d7d;
  outline-color: #7d7d7d;
}

.c2 {
  position: relative;
  width: 100%;
}

.c3 {
  padding: 0.8rem 1rem;
  margin: 0;
  border: none;
  width: 100%;
  font-size: 1rem;
  outline: none;
  background-color: transparent;
}

.c4 {
  position: absolute;
  left: 1rem;
  padding: 0 0rem;
  background-color: transparent;
  font-size: 1rem;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: all 0.3s ease,color 0s;
  transition: all 0.3s ease,color 0s;
  pointer-events: none;
}

<div
  className="c0"
>
  <div
    className="c1"
    disabled={true}
  >
    <div
      className="c2"
    >
      <input
        className="c3"
        disabled={true}
        onBlur={[Function]}
        onFocus={[Function]}
        value=""
      />
      <label
        className="c4"
      >
        Text goes here
      </label>
    </div>
  </div>
  <div
    className="c5"
  />
</div>
`;

exports[`Storyshots @components/atoms/Input error 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c5 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #c22d74;
  color: #c22d74;
  outline: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c1:hover {
  color: #c22d74;
  outline-width: 1px;
  outline-style: solid;
  border-color: #c22d74;
  outline-color: #c22d74;
}

.c2 {
  position: relative;
  width: 100%;
}

.c3 {
  padding: 0.8rem 1rem;
  margin: 0;
  border: none;
  width: 100%;
  font-size: 1rem;
  outline: none;
  background-color: transparent;
}

.c4 {
  position: absolute;
  left: 0.5rem;
  padding: 0 0.5rem;
  background-color: #fff;
  font-size: 0.875rem;
  top: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: all 0.3s ease,color 0s;
  transition: all 0.3s ease,color 0s;
  pointer-events: none;
}

<div
  className="c0"
>
  <div
    className="c1"
    disabled={false}
  >
    <div
      className="c2"
    >
      <input
        className="c3"
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        value="Some text"
      />
      <label
        className="c4"
      >
        Text goes here
      </label>
    </div>
  </div>
  <div
    className="c5"
  />
</div>
`;

exports[`Storyshots @components/atoms/Input with value 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c6 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #323232;
  color: #323232;
  outline: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c1:hover {
  color: #21125e;
  outline-width: 1px;
  outline-style: solid;
  border-color: #21125e;
  outline-color: #21125e;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  position: relative;
  width: 100%;
}

.c3 {
  padding: 0.8rem 1rem;
  margin: 0;
  border: none;
  width: 100%;
  font-size: 1rem;
  outline: none;
  background-color: transparent;
}

.c4 {
  position: absolute;
  left: 0.5rem;
  padding: 0 0.5rem;
  background-color: #fff;
  font-size: 0.875rem;
  top: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: all 0.3s ease,color 0s;
  transition: all 0.3s ease,color 0s;
  pointer-events: none;
}

<div
  className="c0"
>
  <div
    className="c1"
    disabled={false}
  >
    <div
      className="c2"
    >
      <input
        className="c3"
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        value="Example text"
      />
      <label
        className="c4"
      >
        Text goes here
      </label>
    </div>
    <span
      className="c5"
    >
      <div>
        Content right
      </div>
    </span>
  </div>
  <div
    className="c6"
  />
</div>
`;

exports[`Storyshots @components/atoms/Loader default 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  padding: 1rem 0;
}

.c2 {
  position: relative;
  width: 5rem;
  height: 1rem;
  margin: 0 auto;
}

.c2 span {
  background-color: #21125e;
  width: 1rem;
  height: 1rem;
  border-radius: 1rem;
  position: absolute;
}

.c2 span:nth-child(1) {
  left: 0;
  -webkit-animation: hKcKTr 2s infinite;
  animation: hKcKTr 2s infinite;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
}

.c2 span:nth-child(2) {
  left: 2rem;
  -webkit-animation: jcXNMq 2s infinite;
  animation: jcXNMq 2s infinite;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
}

.c2 span:nth-child(3) {
  right: 0;
  -webkit-animation: ggvZqn 2s infinite;
  animation: ggvZqn 2s infinite;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <span />
      <span />
      <span />
    </div>
  </div>
  <div
    className="c3"
  />
</div>
`;

exports[`Storyshots @components/atoms/Message action card 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c6 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  width: 25rem;
  padding: 1rem 1.5rem;
  background-color: #fff;
  box-shadow: 0px 6px 15px 3px rgba(0,0,0,0.25);
  position: fixed;
  bottom: 1rem;
  right: 1rem;
  border-left: 0.4rem solid;
  border-color: #c22d74;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  text-transform: uppercase;
  font-weight: 800;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  margin: 0 1.5rem 0 0;
}

.c4 {
  margin: 1rem 0 0;
}

.c5 {
  color: #21125e;
  cursor: pointer;
  font-size: 1rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <p
        className="c3"
      >
        Sample Message
      </p>
    </div>
    <div
      className="c4"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut rutrum arcu lectus, ac viverra sapien volutpat eu. Nam et eros nunc. Nunc rutrum erat eu massa facilisis faucibus. Mauris ultrices eleifend sollicitudin. Vestibulum eleifend cursus arcu, et vehicula turpis blandit a. Fusce vitae arcu bibendum, dapibus felis eu, dignissim orci.
    </div>
    <button
      className="c5"
      onClick={[Function]}
      style={
        Object {
          "marginTop": "1rem",
        }
      }
    >
      Refresh
    </button>
  </div>
  <div
    className="c6"
  />
</div>
`;

exports[`Storyshots @components/atoms/Message action snackbar 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c5 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  width: 25rem;
  padding: 1rem 1.5rem;
  background-color: #fff;
  box-shadow: 0px 6px 15px 3px rgba(0,0,0,0.25);
  position: fixed;
  bottom: 1rem;
  right: 1rem;
  border-left: 0.4rem solid;
  border-color: #c22d74;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  text-transform: uppercase;
  font-weight: 800;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  margin: 0 1.5rem 0 0;
}

.c4 {
  color: #21125e;
  cursor: pointer;
  font-size: 1rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <p
        className="c3"
      >
        Sample Message
      </p>
      <button
        className="c4"
        onClick={[Function]}
      >
        Try again
      </button>
    </div>
  </div>
  <div
    className="c5"
  />
</div>
`;

exports[`Storyshots @components/atoms/Message error w/ children 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c6 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  width: 25rem;
  padding: 1rem 1.5rem;
  background-color: #fff;
  box-shadow: 0px 6px 15px 3px rgba(0,0,0,0.25);
  position: fixed;
  bottom: 1rem;
  right: 1rem;
  border-left: 0.4rem solid;
  border-color: #c22d74;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  text-transform: uppercase;
  font-weight: 800;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  margin: 0 1.5rem 0 0;
}

.c4 {
  cursor: pointer;
}

.c4 path {
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

.c4:hover path {
  fill: #3ee7cd;
}

.c5 {
  margin: 1rem 0 0;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <p
        className="c3"
      >
        Sample Message
      </p>
      <button
        className="c4"
        onClick={[Function]}
      >
        <svg
          height={15}
          viewBox="0 0 32 32"
          width={15}
        >
          <path
            d="M16 12.8l-12.8-12.8-3.2 3.2 12.8 12.8-12.8 12.8 3.2 3.2 12.8-12.8 12.8 12.8 3.2-3.2-12.8-12.8 12.8-12.8-3.2-3.2-12.8 12.8z"
            fill="#c4c4c4"
          />
        </svg>
      </button>
    </div>
    <div
      className="c5"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut rutrum arcu lectus, ac viverra sapien volutpat eu. Nam et eros nunc. Nunc rutrum erat eu massa facilisis faucibus. Mauris ultrices eleifend sollicitudin. Vestibulum eleifend cursus arcu, et vehicula turpis blandit a. Fusce vitae arcu bibendum, dapibus felis eu, dignissim orci.
    </div>
  </div>
  <div
    className="c6"
  />
</div>
`;

exports[`Storyshots @components/atoms/Message neutral snackbar 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c5 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  width: 25rem;
  padding: 1rem 1.5rem;
  background-color: #fff;
  box-shadow: 0px 6px 15px 3px rgba(0,0,0,0.25);
  position: fixed;
  bottom: 1rem;
  right: 1rem;
  border-left: 0.4rem solid;
  border-color: #42beab;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  text-transform: uppercase;
  font-weight: 800;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  margin: 0 1.5rem 0 0;
}

.c4 {
  cursor: pointer;
}

.c4 path {
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

.c4:hover path {
  fill: #3ee7cd;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <p
        className="c3"
      >
        Sample Message
      </p>
      <button
        className="c4"
        onClick={[Function]}
      >
        <svg
          height={15}
          viewBox="0 0 32 32"
          width={15}
        >
          <path
            d="M16 12.8l-12.8-12.8-3.2 3.2 12.8 12.8-12.8 12.8 3.2 3.2 12.8-12.8 12.8 12.8 3.2-3.2-12.8-12.8 12.8-12.8-3.2-3.2-12.8 12.8z"
            fill="#c4c4c4"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    className="c5"
  />
</div>
`;

exports[`Storyshots @components/atoms/Message success w/ children 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c6 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  width: 25rem;
  padding: 1rem 1.5rem;
  background-color: #fff;
  box-shadow: 0px 6px 15px 3px rgba(0,0,0,0.25);
  position: fixed;
  bottom: 1rem;
  right: 1rem;
  border-left: 0.4rem solid;
  border-color: #3ed256;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  text-transform: uppercase;
  font-weight: 800;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  margin: 0 1.5rem 0 0;
}

.c4 {
  cursor: pointer;
}

.c4 path {
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

.c4:hover path {
  fill: #3ee7cd;
}

.c5 {
  margin: 1rem 0 0;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <p
        className="c3"
      >
        Sample Message
      </p>
      <button
        className="c4"
        onClick={[Function]}
      >
        <svg
          height={15}
          viewBox="0 0 32 32"
          width={15}
        >
          <path
            d="M16 12.8l-12.8-12.8-3.2 3.2 12.8 12.8-12.8 12.8 3.2 3.2 12.8-12.8 12.8 12.8 3.2-3.2-12.8-12.8 12.8-12.8-3.2-3.2-12.8 12.8z"
            fill="#c4c4c4"
          />
        </svg>
      </button>
    </div>
    <div
      className="c5"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut rutrum arcu lectus, ac viverra sapien volutpat eu. Nam et eros nunc. Nunc rutrum erat eu massa facilisis faucibus. Mauris ultrices eleifend sollicitudin. Vestibulum eleifend cursus arcu, et vehicula turpis blandit a. Fusce vitae arcu bibendum, dapibus felis eu, dignissim orci.
    </div>
  </div>
  <div
    className="c6"
  />
</div>
`;

exports[`Storyshots @components/atoms/RichTextContent custom 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c1 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

<div
  className="c0"
>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "<p><strong>bold</strong></p>
<p><em>italic</em></p>
<p><del>strikethrough</del></p>
<h1>h1</h1>
<h2>h2</h2>
<h3>h3</h3>
<blockquote>blockquote</blockquote>
<ul>
<li>ul</li>
</ul>
<ol>
<li>ol</li>
</ol>
<p><a href=\\"#\\" target=\\"_self\\">link</a></p>
",
      }
    }
  />
  <div
    className="c1"
  />
</div>
`;

exports[`Storyshots @components/atoms/RichTextContent default 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c1 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

<div
  className="c0"
>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "<p>They say polo is the sport of kings.Or was that stamp collecting ? Either way, this shirt is fit for a king of Saturday night.</p>
",
      }
    }
  />
  <div
    className="c1"
  />
</div>
`;

exports[`Storyshots @components/atoms/SocialMediaIcon sample medium 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  padding: 1rem NaNrem;
}

.c2 path {
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

.c2:hover path {
  fill: #3ee7cd;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <a
      aria-label="facebook"
      className="c2"
      href="https://www.facebook.com/mirumeelabs/"
      target="_blank"
    >
      <svg
        height={36}
        viewBox="0 0 32 32"
        width={36}
      >
        <path
          d="M16 0c-8.822 0-16 7.178-16 16s7.178 16 16 16c8.822 0 16-7.178 16-16s-7.177-16-16-16zM19.979 16.563h-2.603c0 4.159 0 9.278 0 9.278h-3.857c0 0 0-5.070 0-9.278h-1.834v-3.279h1.834v-2.121c0-1.519 0.722-3.893 3.893-3.893l2.858 0.011v3.183c0 0-1.737 0-2.075 0s-0.818 0.169-0.818 0.893v1.927h2.939l-0.337 3.279z"
          fill="#21125e"
        />
      </svg>
    </a>
  </div>
  <div
    className="c3"
  />
</div>
`;

exports[`Storyshots @components/molecules/TextField default 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c6 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #323232;
  color: #323232;
  outline: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c2:hover {
  color: #21125e;
  outline-width: 1px;
  outline-style: solid;
  border-color: #21125e;
  outline-color: #21125e;
}

.c3 {
  position: relative;
  width: 100%;
}

.c4 {
  padding: 0.8rem 1rem;
  margin: 0;
  border: none;
  width: 100%;
  font-size: 1rem;
  outline: none;
  background-color: transparent;
}

.c5 {
  position: absolute;
  left: 0.5rem;
  padding: 0 0.5rem;
  background-color: #fff;
  font-size: 0.875rem;
  top: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: all 0.3s ease,color 0s;
  transition: all 0.3s ease,color 0s;
  pointer-events: none;
}

.c1 {
  margin-bottom: 1rem;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      disabled={false}
    >
      <div
        className="c3"
      >
        <input
          className="c4"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          value="Value"
        />
        <label
          className="c5"
        >
          Label
        </label>
      </div>
    </div>
  </div>
  <div
    className="c6"
  />
</div>
`;

exports[`Storyshots @components/molecules/TextField with content left 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c7 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #323232;
  color: #323232;
  outline: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c2:hover {
  color: #21125e;
  outline-width: 1px;
  outline-style: solid;
  border-color: #21125e;
  outline-color: #21125e;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  position: relative;
  width: 100%;
}

.c5 {
  padding: 0.8rem 1rem;
  margin: 0;
  border: none;
  width: 100%;
  font-size: 1rem;
  outline: none;
  background-color: transparent;
}

.c6 {
  position: absolute;
  left: 0.5rem;
  padding: 0 0.5rem;
  background-color: #fff;
  font-size: 0.875rem;
  top: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: all 0.3s ease,color 0s;
  transition: all 0.3s ease,color 0s;
  pointer-events: none;
}

.c1 {
  margin-bottom: 1rem;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      disabled={false}
    >
      <span
        className="c3"
      />
      <div
        className="c4"
      >
        <input
          className="c5"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          value="Value"
        />
        <label
          className="c6"
        >
          Label
        </label>
      </div>
    </div>
  </div>
  <div
    className="c7"
  />
</div>
`;

exports[`Storyshots @components/molecules/TextField with content right 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c7 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #323232;
  color: #323232;
  outline: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c2:hover {
  color: #21125e;
  outline-width: 1px;
  outline-style: solid;
  border-color: #21125e;
  outline-color: #21125e;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  position: relative;
  width: 100%;
}

.c4 {
  padding: 0.8rem 1rem;
  margin: 0;
  border: none;
  width: 100%;
  font-size: 1rem;
  outline: none;
  background-color: transparent;
}

.c5 {
  position: absolute;
  left: 0.5rem;
  padding: 0 0.5rem;
  background-color: #fff;
  font-size: 0.875rem;
  top: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: all 0.3s ease,color 0s;
  transition: all 0.3s ease,color 0s;
  pointer-events: none;
}

.c1 {
  margin-bottom: 1rem;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      disabled={false}
    >
      <div
        className="c3"
      >
        <input
          className="c4"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          value="Value"
        />
        <label
          className="c5"
        >
          Label
        </label>
      </div>
      <span
        className="c6"
      />
    </div>
  </div>
  <div
    className="c7"
  />
</div>
`;

exports[`Storyshots @components/molecules/TextField with errors 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c7 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c6 {
  color: #c22d74;
  font-size: 0.75rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #c22d74;
  color: #c22d74;
  outline: none;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c2:hover {
  color: #c22d74;
  outline-width: 1px;
  outline-style: solid;
  border-color: #c22d74;
  outline-color: #c22d74;
}

.c3 {
  position: relative;
  width: 100%;
}

.c4 {
  padding: 0.8rem 1rem;
  margin: 0;
  border: none;
  width: 100%;
  font-size: 1rem;
  outline: none;
  background-color: transparent;
}

.c5 {
  position: absolute;
  left: 0.5rem;
  padding: 0 0.5rem;
  background-color: #fff;
  font-size: 0.875rem;
  top: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: all 0.3s ease,color 0s;
  transition: all 0.3s ease,color 0s;
  pointer-events: none;
}

.c1 {
  margin-bottom: 1rem;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      disabled={false}
    >
      <div
        className="c3"
      >
        <input
          className="c4"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          value="Value"
        />
        <label
          className="c5"
        >
          Label
        </label>
      </div>
    </div>
    <span
      className="c6"
    >
      Some error
    </span>
  </div>
  <div
    className="c7"
  />
</div>
`;
